--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@stripe/stripe-js": "^5.5.0",
+    "bcrypt": "^5.1.1",
     "mongodb": "^5.9.2",
     "mongoose": "^8.9.4",
     "next": "15.1.4",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcrypt": "^5.0.2",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
